--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <canvas id="canvas_id" width="500" height="375"></canvas>
+<script src="keymaster.min.js"></script>
 <script type="text/javascript" src="./underscore.js"></script>
 <script type="text/javascript" src="./asteroids.js"></script>
